<resources>
    <string name="timer_format" translatable="false">%02d:%02d</string>
    <string name="distance_format" translatable="false">%.0f m</string>
    <string name="calories_format" translatable="false">%.1f kcal</string>
    <string name="current_rpm_format" translatable="false">%.1f</string>
    <string name="time_for_500m_format" translatable="false">%02d:%02d</string>
    <string name="total_strokes_format" translatable="false">%d</string>
    <string name="bpm_format" translatable="false">%d</string>

    <string name="database_name" translatable="false">rower_plus_db</string>
    <string name="preferences_key" translatable="false">it.paoloinfante.rowerplus.SharedPreferences</string>

    <string name="preferenceFloatingWindow" translatable="false">app_preference_floating_window</string>
    <string name="preferenceUserAge" translatable="false">app_preference_user_age</string>

    <string name="app_name">RowerPlus</string>
    <string name="training_info_timer_default">-</string>
    <string name="training_info_swipe_left">Swipe left to change info</string>
    <string name="training_info_swipe_right">Swipe right to change info</string>
    <string name="menu_main_title">Rower</string>
    <string name="menu_workouts_title">All Workouts</string>
    <string name="workouts_delete_all_warning">Do you really want to delete all the workouts?</string>
    <string name="error_no_usb_devices">No USB devices available</string>
    <string name="error_permission_rejected_title">Permissions rejected</string>
    <string name="error_permission_rejected_message">The permissions for the USB device have not been granted</string>
    <string name="error_permission_error_title">Permissions error</string>
    <string name="error_permission_error_message">An error occurred while gathering USB device permissions</string>
    <string name="message_ok">OK</string>
    <string name="message_connection_successful">Connection to USB device successful!</string>
    <string name="error_device_disconnected">USB device not connected! Retrying in a little while…</string>
    <string name="all_workouts_actionmode_title">Edit workouts</string>
    <string name="all_workouts_selection_format">%d selected</string>
    <string name="all_workouts_menu_delete_all">Delete All</string>
    <string name="all_workouts_menu_delete_some">Delete</string>
    <string name="message_no">No</string>
    <string name="message_yes">Yes</string>
    <string name="workouts_delete_selected_warning">Do you really want to delete the %d selected workouts?</string>
    <string name="single_workout_menu_delete">Delete</string>
    <string name="workout_delete_confirmation_message">Do you really want to delete this workout?</string>
    <string name="performance_distance_chart_series">Distance (m)</string>
    <string name="performance_rpm_chart_series">SPM</string>
    <string name="workout_performance_distance_label">Distance</string>
    <string name="workout_performance_rpm_label">Strokes per Minute</string>
    <string name="workout_performance_calories_label">Calories</string>
    <string name="performance_calories_chart_series">Calories (kcal)</string>
    <string name="performance_bpm_chart_series">BPM</string>
    <string name="single_workout_menu_export">Export to Excel file</string>
    <string name="navigation_workouts_label">Workouts</string>
    <string name="navigation_workout_label">Workout</string>
    <string name="navigation_rower_label">Rower</string>
    <string name="error_createfile">An error occurred while creating the file</string>
    <string name="alert_overlay_permission_title">Screen Overlay Permission Needed</string>
    <string name="alert_overlay_permission_message">Enable \'Display over other apps\' from System Settings.</string>
    <string name="alert_overlay_permission_open_settings">Open Settings</string>
    <string name="floating_window_close_button_content_description">Close</string>
    <string name="menu_schemes_title">Schemes</string>
    <string name="navigation_schemes_label">Schemes</string>
    <string name="schemes_menu_add">Create</string>
    <string name="new_scheme_menu_save">Save</string>
    <string name="schemes_menu_load_file">Load from file</string>
    <string name="error_configuration_file_not_supported">The selected file is not compatible and could not be loaded</string>
    <string name="rower_data_menu_load_file">Connect to Heart Rate sensor</string>
    <string name="message_hr_connected">Heart rate sensor connected successfully</string>
    <string name="message_hr_disconnected">Heart rate sensor disconnected</string>
    <string name="workout_performance_bpm_label">BPM</string>
    <string name="ble_dialog_select_device">Select bluetooth device</string>
    <string name="navigation_preferences_label">Settings</string>
    <string name="navigation_new_scheme_label">New scheme</string>
    <string name="menu_preferences_title">Settings</string>
    <string name="preference_floating_window_title">Enable floating window when app is in the background</string>
    <string name="preference_user_age_title">Age (will be used for heart rate zones calculation)</string>
    <string name="workout_performance_hr_zones_label">Heart Rate Zones</string>
    <string name="hr_zones_low_intensity">Low intensity</string>
    <string name="hr_zones_zone_1">Zone 1</string>
    <string name="hr_zones_zone_2">Zone 2</string>
    <string name="hr_zones_zone_3">Zone 3</string>
    <string name="hr_zones_zone_4">Zone 4</string>
    <string name="hr_zones_zone_5">Zone 5</string>
    <string name="hr_zones_critical">Critical</string>

    <string name="parameters_view_timer">Time</string>
    <string name="parameters_view_distance">Distance</string>
    <string name="parameters_view_calories">Calories</string>
    <string name="parameters_view_spm">SPM</string>
    <string name="parameters_view_time_for_500m">Time/500m</string>
    <string name="parameters_view_total_strokes">Total strokes</string>
    <string name="parameters_view_bpm">BPM</string>

    <string-array name="workout_variables">
        <item>Time</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>SPM</item>
        <item>Time/500m</item>
        <item>Total Rows</item>
        <item>BPM</item>
    </string-array>
</resources>