<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="?actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_container_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/workout_performance_distance_label"
            android:textSize="@dimen/workout_performance_label_size"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/distanceChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/workout_performance_rpm_label"
            android:textSize="@dimen/workout_performance_label_size"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/rpmChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/workout_performance_calories_label"
            android:textSize="@dimen/workout_performance_label_size"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/caloriesChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/workout_performance_bpm_label"
            android:textSize="@dimen/workout_performance_label_size"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/bpmChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <TextView
            android:visibility="gone"
            android:id="@+id/hrZonesLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/workout_performance_hr_zones_label"
            android:textSize="@dimen/workout_performance_label_size"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />

        <com.github.mikephil.charting.charts.PieChart
            android:visibility="gone"
            android:id="@+id/hrZonesChart"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/workout_performance_label_margin_bottom" />
    </LinearLayout>
</ScrollView>